Beautify CSS. Remove nomq (MediaQuery) css. 'Fix' program selector

--- a/data/css/advanced.css
+++ b/data/css/advanced.css
@@ -1,1 +1,526 @@
-.version.advanced{color:#00000C;background-color:#BA02E8;}#page{background-image:none;margin-right:auto;background-color:transparent;z-index:1;border-color:#000000;border-width:0px;margin-left:auto;}#u1479{position:relative;z-index:42;background-color:transparent;}#u1480{display:block;z-index:43;}#u1478-4{color:#000000;text-align:center;position:relative;font-weight:bold;min-height:35px;font-size:30px;line-height:36px;background-color:transparent;z-index:38;}#u1478-2{padding-top:8px;}#u1481-4{color:#000000;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:44;}#pu1469-4{width:0.01px;z-index:2;}#u1469-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:2;border-color:#000000;}#u1470-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:6;border-color:#000000;}#u1482-4{z-index:48;color:#000000;width:281px;position:relative;font-weight:bold;min-height:17px;font-size:12px;line-height:14px;background-color:transparent;}#pu1471-4{width:0.01px;z-index:10;}#u1471-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:10;border-color:#000000;}#u1472-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:14;border-color:#000000;}#u1483-4{color:#000000;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:52;}#pu1473-4{width:0.01px;z-index:18;}#u1473-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:18;border-color:#000000;}#u1474-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:22;border-color:#000000;}#u1484-4{color:#000000;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:56;}#pu1475-4{z-index:26;width:0.01px;margin-left:2px;}#u1475-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:26;border-color:#000000;}#u1476-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:30;border-color:#000000;}#u1477-4{color:#000000;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;line-height:29px;background-color:#29ABE2;z-index:34;border-style:solid;border-color:#000000;border-radius:10px;width:281px;border-width:2px;}#u1469-2,#u1470-2,#u1471-2,#u1472-2,#u1473-2,#u1474-2,#u1475-2,#u1476-2,#u1477-2{padding-top:14px;}.html{background-color:#FACA30;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{width:285px;min-height:638px;padding:24px 337px 21px 338px;}#u1479{width:75px;margin-left:104px;}#u1478-4{width:281px;margin-left:2px;margin-top:21px;}#u1481-4{margin-left:2px;margin-top:29px;}#pu1469-4{margin-left:2px;margin-top:8px;}#u1482-4,#pu1471-4,#u1483-4,#pu1473-4,#u1484-4{margin-left:2px;margin-top:11px;}#pu1475-4{margin-top:11px;}#u1469-4,#u1471-4,#u1473-4,#u1475-4{width:141px;}#u1470-4,#u1472-4,#u1474-4,#u1476-4{width:141px;left:141px;}#u1477-4{left:-1px;margin-top:38px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 683px);}body{min-width:960px;}}@media (min-width: 741px) and (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{width:285px;min-height:636px;padding:24px 227px 19px 228px;}#u1479{width:75px;margin-left:104px;}#u1478-4{width:281px;margin-left:1px;margin-top:43px;}#pu1469-4{margin-left:1px;margin-top:3px;}#u1482-4{margin-left:2px;margin-top:11px;}#pu1471-4,#pu1473-4{margin-left:1px;margin-top:10px;}#u1481-4,#u1483-4,#u1484-4{margin-left:2px;margin-top:12px;}#pu1475-4{margin-top:10px;}#u1469-4,#u1471-4,#u1473-4,#u1475-4{width:141px;}#u1470-4,#u1472-4,#u1474-4,#u1476-4{width:141px;left:141px;}#u1477-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 678px);}body{overflow-x:hidden;min-width:740px;}}@media (min-width: 321px) and (max-width: 740px){#muse_css_mq{background-color:#0002e4;}#bp_740.active{display:block;}#page{width:285px;min-height:636px;padding:24px 18px 21px 17px;}#u1479{width:75px;margin-left:105px;}#u1478-4{width:281px;margin-left:2px;margin-top:43px;}#pu1469-4{margin-left:2px;margin-top:3px;}#u1482-4{margin-left:3px;margin-top:11px;}#pu1471-4,#pu1473-4{margin-left:2px;margin-top:10px;}#u1481-4,#u1483-4,#u1484-4{margin-left:3px;margin-top:12px;}#pu1475-4{margin-top:10px;}#u1469-4,#u1471-4,#u1473-4,#u1475-4{width:141px;}#u1470-4,#u1472-4,#u1474-4,#u1476-4{width:140px;left:141px;}#u1477-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 681px);}body{overflow-x:hidden;min-width:320px;}}@media (max-width: 320px){#muse_css_mq{background-color:#000140;}#bp_320.active{display:block;}#page{width:286px;min-height:561px;padding:20px 17px 101px;}#u1479{width:38px;margin-left:124px;}#u1478-4{width:280px;margin-left:3px;margin-top:6px;}#pu1469-4{margin-left:2px;margin-top:2px;}#pu1471-4,#pu1473-4{margin-left:2px;margin-top:10px;}#u1481-4,#u1482-4,#u1483-4,#u1484-4{margin-left:3px;margin-top:12px;}#pu1475-4{margin-top:9px;}#u1469-4,#u1471-4,#u1473-4,#u1475-4{width:140px;}#u1470-4,#u1472-4,#u1474-4,#u1476-4{width:141px;left:140px;}#u1477-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 681px);}body{overflow-x:hidden;min-width:320px;}}
+.version.advanced {
+  color: #00000C;
+  background-color: #BA02E8;
+}
+
+#page {
+  background-image: none;
+  margin-right: auto;
+  background-color: transparent;
+  z-index: 1;
+  border-color: #000000;
+  border-width: 0px;
+  margin-left: auto;
+}
+
+#u1479 {
+  position: relative;
+  z-index: 42;
+  background-color: transparent;
+}
+
+#u1480 {
+  display: block;
+  z-index: 43;
+}
+
+#u1478-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 35px;
+  font-size: 30px;
+  line-height: 36px;
+  background-color: transparent;
+  z-index: 38;
+}
+
+#u1478-2 {
+  padding-top: 8px;
+}
+
+#u1481-4 {
+  color: #000000;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 44;
+}
+
+#pu1469-4 {
+  width: 0.01px;
+  z-index: 2;
+}
+
+#u1469-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 2;
+  border-color: #000000;
+}
+
+#u1470-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 6;
+  border-color: #000000;
+}
+
+#u1482-4 {
+  z-index: 48;
+  color: #000000;
+  width: 281px;
+  position: relative;
+  font-weight: bold;
+  min-height: 17px;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+}
+
+#pu1471-4 {
+  width: 0.01px;
+  z-index: 10;
+}
+
+#u1471-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 10;
+  border-color: #000000;
+}
+
+#u1472-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 14;
+  border-color: #000000;
+}
+
+#u1483-4 {
+  color: #000000;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 52;
+}
+
+#pu1473-4 {
+  width: 0.01px;
+  z-index: 18;
+}
+
+#u1473-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 18;
+  border-color: #000000;
+}
+
+#u1474-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 22;
+  border-color: #000000;
+}
+
+#u1484-4 {
+  color: #000000;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 56;
+}
+
+#pu1475-4 {
+  z-index: 26;
+  width: 0.01px;
+  margin-left: 2px;
+}
+
+#u1475-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 26;
+  border-color: #000000;
+}
+
+#u1476-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 30;
+  border-color: #000000;
+}
+
+#u1477-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  line-height: 29px;
+  background-color: #29ABE2;
+  z-index: 34;
+  border-style: solid;
+  border-color: #000000;
+  border-radius: 10px;
+  width: 281px;
+  border-width: 2px;
+}
+
+#u1469-2,
+#u1470-2,
+#u1471-2,
+#u1472-2,
+#u1473-2,
+#u1474-2,
+#u1475-2,
+#u1476-2,
+#u1477-2 {
+  padding-top: 14px;
+}
+
+.html {
+  background-color: #FACA30;
+}
+
+body {
+  position: relative;
+}
+
+@media (min-width: 961px),
+print {
+  #muse_css_mq {
+    background-color: #FFFFFF;
+  }
+  #bp_infinity.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 638px;
+    padding: 24px 337px 21px 338px;
+  }
+  #u1479 {
+    width: 75px;
+    margin-left: 104px;
+  }
+  #u1478-4 {
+    width: 281px;
+    margin-left: 2px;
+    margin-top: 21px;
+  }
+  #u1481-4 {
+    margin-left: 2px;
+    margin-top: 29px;
+  }
+  #pu1469-4 {
+    margin-left: 2px;
+    margin-top: 8px;
+  }
+  #u1482-4,
+  #pu1471-4,
+  #u1483-4,
+  #pu1473-4,
+  #u1484-4 {
+    margin-left: 2px;
+    margin-top: 11px;
+  }
+  #pu1475-4 {
+    margin-top: 11px;
+  }
+  #u1469-4,
+  #u1471-4,
+  #u1473-4,
+  #u1475-4 {
+    width: 141px;
+  }
+  #u1470-4,
+  #u1472-4,
+  #u1474-4,
+  #u1476-4 {
+    width: 141px;
+    left: 141px;
+  }
+  #u1477-4 {
+    left: -1px;
+    margin-top: 38px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 683px);
+  }
+  body {
+    min-width: 960px;
+  }
+}
+
+@media (min-width: 741px) and (max-width: 960px) {
+  #muse_css_mq {
+    background-color: #0003c0;
+  }
+  #bp_960.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 636px;
+    padding: 24px 227px 19px 228px;
+  }
+  #u1479 {
+    width: 75px;
+    margin-left: 104px;
+  }
+  #u1478-4 {
+    width: 281px;
+    margin-left: 1px;
+    margin-top: 43px;
+  }
+  #pu1469-4 {
+    margin-left: 1px;
+    margin-top: 3px;
+  }
+  #u1482-4 {
+    margin-left: 2px;
+    margin-top: 11px;
+  }
+  #pu1471-4,
+  #pu1473-4 {
+    margin-left: 1px;
+    margin-top: 10px;
+  }
+  #u1481-4,
+  #u1483-4,
+  #u1484-4 {
+    margin-left: 2px;
+    margin-top: 12px;
+  }
+  #pu1475-4 {
+    margin-top: 10px;
+  }
+  #u1469-4,
+  #u1471-4,
+  #u1473-4,
+  #u1475-4 {
+    width: 141px;
+  }
+  #u1470-4,
+  #u1472-4,
+  #u1474-4,
+  #u1476-4 {
+    width: 141px;
+    left: 141px;
+  }
+  #u1477-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 678px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 740px;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 740px) {
+  #muse_css_mq {
+    background-color: #0002e4;
+  }
+  #bp_740.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 636px;
+    padding: 24px 18px 21px 17px;
+  }
+  #u1479 {
+    width: 75px;
+    margin-left: 105px;
+  }
+  #u1478-4 {
+    width: 281px;
+    margin-left: 2px;
+    margin-top: 43px;
+  }
+  #pu1469-4 {
+    margin-left: 2px;
+    margin-top: 3px;
+  }
+  #u1482-4 {
+    margin-left: 3px;
+    margin-top: 11px;
+  }
+  #pu1471-4,
+  #pu1473-4 {
+    margin-left: 2px;
+    margin-top: 10px;
+  }
+  #u1481-4,
+  #u1483-4,
+  #u1484-4 {
+    margin-left: 3px;
+    margin-top: 12px;
+  }
+  #pu1475-4 {
+    margin-top: 10px;
+  }
+  #u1469-4,
+  #u1471-4,
+  #u1473-4,
+  #u1475-4 {
+    width: 141px;
+  }
+  #u1470-4,
+  #u1472-4,
+  #u1474-4,
+  #u1476-4 {
+    width: 140px;
+    left: 141px;
+  }
+  #u1477-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 681px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
+
+@media (max-width: 320px) {
+  #muse_css_mq {
+    background-color: #000140;
+  }
+  #bp_320.active {
+    display: block;
+  }
+  #page {
+    width: 286px;
+    min-height: 561px;
+    padding: 20px 17px 101px;
+  }
+  #u1479 {
+    width: 38px;
+    margin-left: 124px;
+  }
+  #u1478-4 {
+    width: 280px;
+    margin-left: 3px;
+    margin-top: 6px;
+  }
+  #pu1469-4 {
+    margin-left: 2px;
+    margin-top: 2px;
+  }
+  #pu1471-4,
+  #pu1473-4 {
+    margin-left: 2px;
+    margin-top: 10px;
+  }
+  #u1481-4,
+  #u1482-4,
+  #u1483-4,
+  #u1484-4 {
+    margin-left: 3px;
+    margin-top: 12px;
+  }
+  #pu1475-4 {
+    margin-top: 9px;
+  }
+  #u1469-4,
+  #u1471-4,
+  #u1473-4,
+  #u1475-4 {
+    width: 140px;
+  }
+  #u1470-4,
+  #u1472-4,
+  #u1474-4,
+  #u1476-4 {
+    width: 141px;
+    left: 140px;
+  }
+  #u1477-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 681px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
