--- a/data/css/index.css
+++ b/data/css/index.css
@@ -1,1 +1,261 @@
-.version.index{color:#0000EF;background-color:#1F8AD4;}#page{background-color:transparent;border-width:0px;margin-left:auto;background-image:none;border-color:#000000;z-index:1;padding-top:20px;width:285px;margin-right:auto;}#u144{width:281px;background-color:transparent;z-index:2;position:relative;}#u140{z-index:3;display:block;}#u280{z-index:4;border-width:0px;width:285px;border-color:transparent;background-color:transparent;position:relative;}#u160-4{color:#FFFFFF;background-color:transparent;z-index:5;min-height:35px;position:relative;width:146px;margin-left:2px;}#u172{height:38px;background-color:#FFFFFF;z-index:13;position:relative;width:281px;margin-left:2px;}#u166-4{color:#FFFFFF;background-color:transparent;z-index:9;min-height:34px;position:relative;width:142px;margin-top:43px;margin-left:2px;}#u190{height:38px;background-color:#FFFFFF;z-index:14;position:relative;width:281px;margin-left:2px;}#u250-4{border-radius:10px;color:#FFFFFF;background-color:#000000;z-index:15;min-height:57px;position:relative;text-align:center;font-weight:bold;margin-top:69px;}#u250-2{padding-top:18px;}#u268-4{border-radius:10px;color:#FACA30;background-color:#000000;min-height:57px;border-width:2px;font-size:24px;font-weight:bold;position:relative;text-align:center;border-color:#FACA30;z-index:19;border-style:solid;width:281px;line-height:29px;}#u268-2{padding-top:14px;}.html{background-color:#7F7F7F;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{min-height:571px;padding-left:338px;padding-right:337px;padding-bottom:22px;}#u144{margin-left:1px;}#u280{margin-top:33px;}#u250-4{width:160px;margin-left:62px;}#u268-4{margin-top:52px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 613px);}body{min-width:960px;}}@media (min-width: 741px) and (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{min-height:571px;padding-left:228px;padding-right:227px;padding-bottom:21px;}#u144{margin-left:1px;}#u280{margin-top:33px;}#u250-4{width:180px;margin-left:52px;}#u268-4{margin-top:55px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 612px);}body{overflow-x:hidden;min-width:740px;}}@media (min-width: 321px) and (max-width: 740px){#muse_css_mq{background-color:#0002e4;}#bp_740.active{display:block;}#page{min-height:571px;padding-left:17px;padding-right:18px;padding-bottom:21px;}#u144{margin-left:2px;}#u280{margin-top:33px;}#u250-4{width:169px;margin-left:58px;}#u268-4{margin-top:55px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 612px);}body{overflow-x:hidden;min-width:320px;}}@media (max-width: 320px){#muse_css_mq{background-color:#000140;}#bp_320.active{display:block;}#page{min-height:586px;padding-left:18px;padding-right:17px;padding-bottom:114px;}#u144{margin-left:1px;}#u280{margin-top:48px;}#u250-4{width:169px;margin-left:58px;}#u268-4{margin-top:55px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 719px);}body{overflow-x:hidden;min-width:320px;}}
+.version.index {
+  color: #0000EF;
+  background-color: #1F8AD4;
+}
+
+#page {
+  background-color: transparent;
+  border-width: 0px;
+  margin-left: auto;
+  background-image: none;
+  border-color: #000000;
+  z-index: 1;
+  padding-top: 20px;
+  width: 285px;
+  margin-right: auto;
+}
+
+#u144 {
+  width: 281px;
+  background-color: transparent;
+  z-index: 2;
+  position: relative;
+}
+
+#u140 {
+  z-index: 3;
+  display: block;
+}
+
+#u280 {
+  z-index: 4;
+  border-width: 0px;
+  width: 285px;
+  border-color: transparent;
+  background-color: transparent;
+  position: relative;
+}
+
+#u160-4 {
+  color: #FFFFFF;
+  background-color: transparent;
+  z-index: 5;
+  min-height: 35px;
+  position: relative;
+  width: 146px;
+  margin-left: 2px;
+}
+
+#u172 {
+  height: 38px;
+  background-color: #FFFFFF;
+  z-index: 13;
+  position: relative;
+  width: 281px;
+  margin-left: 2px;
+}
+
+#u166-4 {
+  color: #FFFFFF;
+  background-color: transparent;
+  z-index: 9;
+  min-height: 34px;
+  position: relative;
+  width: 142px;
+  margin-top: 43px;
+  margin-left: 2px;
+}
+
+#u190 {
+  height: 38px;
+  background-color: #FFFFFF;
+  z-index: 14;
+  position: relative;
+  width: 281px;
+  margin-left: 2px;
+}
+
+#u250-4 {
+  border-radius: 10px;
+  color: #FFFFFF;
+  background-color: #000000;
+  z-index: 15;
+  min-height: 57px;
+  position: relative;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 69px;
+}
+
+#u250-2 {
+  padding-top: 18px;
+}
+
+#u268-4 {
+  border-radius: 10px;
+  color: #FACA30;
+  background-color: #000000;
+  min-height: 57px;
+  border-width: 2px;
+  font-size: 24px;
+  font-weight: bold;
+  position: relative;
+  text-align: center;
+  border-color: #FACA30;
+  z-index: 19;
+  border-style: solid;
+  width: 281px;
+  line-height: 29px;
+}
+
+#u268-2 {
+  padding-top: 14px;
+}
+
+.html {
+  background-color: #7F7F7F;
+}
+
+body {
+  position: relative;
+}
+
+@media (min-width: 961px),
+print {
+  #muse_css_mq {
+    background-color: #FFFFFF;
+  }
+  #bp_infinity.active {
+    display: block;
+  }
+  #page {
+    min-height: 571px;
+    padding-left: 338px;
+    padding-right: 337px;
+    padding-bottom: 22px;
+  }
+  #u144 {
+    margin-left: 1px;
+  }
+  #u280 {
+    margin-top: 33px;
+  }
+  #u250-4 {
+    width: 160px;
+    margin-left: 62px;
+  }
+  #u268-4 {
+    margin-top: 52px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 613px);
+  }
+  body {
+    min-width: 960px;
+  }
+}
+
+@media (min-width: 741px) and (max-width: 960px) {
+  #muse_css_mq {
+    background-color: #0003c0;
+  }
+  #bp_960.active {
+    display: block;
+  }
+  #page {
+    min-height: 571px;
+    padding-left: 228px;
+    padding-right: 227px;
+    padding-bottom: 21px;
+  }
+  #u144 {
+    margin-left: 1px;
+  }
+  #u280 {
+    margin-top: 33px;
+  }
+  #u250-4 {
+    width: 180px;
+    margin-left: 52px;
+  }
+  #u268-4 {
+    margin-top: 55px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 612px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 740px;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 740px) {
+  #muse_css_mq {
+    background-color: #0002e4;
+  }
+  #bp_740.active {
+    display: block;
+  }
+  #page {
+    min-height: 571px;
+    padding-left: 17px;
+    padding-right: 18px;
+    padding-bottom: 21px;
+  }
+  #u144 {
+    margin-left: 2px;
+  }
+  #u280 {
+    margin-top: 33px;
+  }
+  #u250-4 {
+    width: 169px;
+    margin-left: 58px;
+  }
+  #u268-4 {
+    margin-top: 55px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 612px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
+
+@media (max-width: 320px) {
+  #muse_css_mq {
+    background-color: #000140;
+  }
+  #bp_320.active {
+    display: block;
+  }
+  #page {
+    min-height: 586px;
+    padding-left: 18px;
+    padding-right: 17px;
+    padding-bottom: 114px;
+  }
+  #u144 {
+    margin-left: 1px;
+  }
+  #u280 {
+    margin-top: 48px;
+  }
+  #u250-4 {
+    width: 169px;
+    margin-left: 58px;
+  }
+  #u268-4 {
+    margin-top: 55px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 719px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
