--- a/data/css/expert.css
+++ b/data/css/expert.css
@@ -1,1 +1,544 @@
-.version.expert{color:#000017;background-color:#C2782F;}#page{background-image:none;margin-right:auto;background-color:transparent;z-index:1;border-color:#000000;padding-top:24px;border-width:0px;margin-left:auto;}#u1323{position:relative;z-index:42;background-color:transparent;}#u1324{display:block;z-index:43;}#u1322-4{color:#FACA30;text-align:center;position:relative;font-weight:bold;min-height:35px;font-size:30px;line-height:36px;background-color:transparent;z-index:38;}#u1322-2{padding-top:8px;}#u1325-4{color:#FFFFFF;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:44;}#pu1313-4{width:0.01px;z-index:2;}#u1313-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:2;border-color:#000000;}#u1314-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:6;border-color:#000000;}#u1326-4{z-index:48;color:#FFFFFF;width:281px;position:relative;font-weight:bold;min-height:17px;font-size:12px;line-height:14px;background-color:transparent;}#pu1315-4{width:0.01px;z-index:10;}#u1315-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:10;border-color:#000000;}#u1316-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:14;border-color:#000000;}#u1327-4{color:#FFFFFF;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:52;}#pu1317-4{width:0.01px;z-index:18;}#u1317-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:18;border-color:#000000;}#u1318-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:22;border-color:#000000;}#u1328-4{color:#FFFFFF;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:56;}#pu1319-4{z-index:26;width:0.01px;margin-left:2px;}#u1319-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:26;border-color:#000000;}#u1320-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:30;border-color:#000000;}#u1321-4{color:#000000;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;line-height:29px;background-color:#29ABE2;z-index:34;border-style:solid;border-color:#000000;border-radius:10px;width:281px;border-width:2px;}#u1313-2,#u1314-2,#u1315-2,#u1316-2,#u1317-2,#u1318-2,#u1319-2,#u1320-2,#u1321-2{padding-top:14px;}.html{background-color:#F15A24;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{width:285px;min-height:638px;padding-left:338px;padding-right:337px;padding-bottom:19px;}#u1323{width:75px;margin-left:104px;}#u1322-4{width:281px;margin-left:2px;margin-top:21px;}#u1325-4{margin-left:2px;margin-top:29px;}#pu1313-4{margin-left:2px;margin-top:8px;}#u1326-4,#pu1315-4,#u1327-4,#pu1317-4,#u1328-4{margin-left:2px;margin-top:11px;}#pu1319-4{margin-top:11px;}#u1313-4,#u1315-4,#u1317-4,#u1319-4{width:141px;}#u1314-4,#u1316-4,#u1318-4,#u1320-4{width:141px;left:141px;}#u1321-4{left:-1px;margin-top:38px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 681px);}body{min-width:960px;}}@media (min-width: 741px) and (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{width:285px;min-height:636px;padding-left:228px;padding-right:227px;padding-bottom:20px;}#u1323{width:75px;margin-left:104px;}#u1322-4{width:281px;margin-left:1px;margin-top:43px;}#pu1313-4{margin-left:1px;margin-top:3px;}#u1326-4{margin-left:2px;margin-top:11px;}#pu1315-4,#pu1317-4{margin-left:1px;margin-top:10px;}#u1325-4,#u1327-4,#u1328-4{margin-left:2px;margin-top:12px;}#pu1319-4{margin-top:10px;}#u1313-4,#u1315-4,#u1317-4,#u1319-4{width:141px;}#u1314-4,#u1316-4,#u1318-4,#u1320-4{width:141px;left:141px;}#u1321-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 679px);}body{overflow-x:hidden;min-width:740px;}}@media (min-width: 321px) and (max-width: 740px){#muse_css_mq{background-color:#0002e4;}#bp_740.active{display:block;}#page{width:285px;min-height:636px;padding-left:17px;padding-right:18px;padding-bottom:20px;}#u1323{width:75px;margin-left:105px;}#u1322-4{width:281px;margin-left:2px;margin-top:43px;}#pu1313-4{margin-left:2px;margin-top:3px;}#u1326-4{margin-left:3px;margin-top:11px;}#pu1315-4,#pu1317-4{margin-left:2px;margin-top:10px;}#u1325-4,#u1327-4,#u1328-4{margin-left:3px;margin-top:12px;}#pu1319-4{margin-top:10px;}#u1313-4,#u1315-4,#u1317-4,#u1319-4{width:141px;}#u1314-4,#u1316-4,#u1318-4,#u1320-4{width:140px;left:141px;}#u1321-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 680px);}body{overflow-x:hidden;min-width:320px;}}@media (max-width: 320px){#muse_css_mq{background-color:#000140;}#bp_320.active{display:block;}#page{width:286px;min-height:556px;padding-left:17px;padding-right:17px;padding-bottom:103px;}#u1323{width:38px;margin-left:124px;}#u1322-4{width:280px;margin-left:3px;margin-top:1px;}#u1325-4{margin-left:3px;margin-top:11px;}#pu1313-4{margin-left:2px;margin-top:3px;}#pu1315-4{margin-left:2px;margin-top:10px;}#u1326-4,#u1327-4{margin-left:3px;margin-top:12px;}#pu1317-4{margin-left:2px;margin-top:9px;}#u1328-4{margin-left:3px;margin-top:13px;}#pu1319-4{margin-top:9px;}#u1313-4,#u1315-4,#u1317-4,#u1319-4{width:140px;}#u1314-4,#u1316-4,#u1318-4,#u1320-4{width:141px;left:140px;}#u1321-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 682px);}body{overflow-x:hidden;min-width:320px;}}
+.version.expert {
+  color: #000017;
+  background-color: #C2782F;
+}
+
+#page {
+  background-image: none;
+  margin-right: auto;
+  background-color: transparent;
+  z-index: 1;
+  border-color: #000000;
+  padding-top: 24px;
+  border-width: 0px;
+  margin-left: auto;
+}
+
+#u1323 {
+  position: relative;
+  z-index: 42;
+  background-color: transparent;
+}
+
+#u1324 {
+  display: block;
+  z-index: 43;
+}
+
+#u1322-4 {
+  color: #FACA30;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 35px;
+  font-size: 30px;
+  line-height: 36px;
+  background-color: transparent;
+  z-index: 38;
+}
+
+#u1322-2 {
+  padding-top: 8px;
+}
+
+#u1325-4 {
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 44;
+}
+
+#pu1313-4 {
+  width: 0.01px;
+  z-index: 2;
+}
+
+#u1313-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 2;
+  border-color: #000000;
+}
+
+#u1314-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 6;
+  border-color: #000000;
+}
+
+#u1326-4 {
+  z-index: 48;
+  color: #FFFFFF;
+  width: 281px;
+  position: relative;
+  font-weight: bold;
+  min-height: 17px;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+}
+
+#pu1315-4 {
+  width: 0.01px;
+  z-index: 10;
+}
+
+#u1315-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 10;
+  border-color: #000000;
+}
+
+#u1316-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 14;
+  border-color: #000000;
+}
+
+#u1327-4 {
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 52;
+}
+
+#pu1317-4 {
+  width: 0.01px;
+  z-index: 18;
+}
+
+#u1317-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 18;
+  border-color: #000000;
+}
+
+#u1318-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 22;
+  border-color: #000000;
+}
+
+#u1328-4 {
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 56;
+}
+
+#pu1319-4 {
+  z-index: 26;
+  width: 0.01px;
+  margin-left: 2px;
+}
+
+#u1319-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 26;
+  border-color: #000000;
+}
+
+#u1320-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 30;
+  border-color: #000000;
+}
+
+#u1321-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  line-height: 29px;
+  background-color: #29ABE2;
+  z-index: 34;
+  border-style: solid;
+  border-color: #000000;
+  border-radius: 10px;
+  width: 281px;
+  border-width: 2px;
+}
+
+#u1313-2,
+#u1314-2,
+#u1315-2,
+#u1316-2,
+#u1317-2,
+#u1318-2,
+#u1319-2,
+#u1320-2,
+#u1321-2 {
+  padding-top: 14px;
+}
+
+.html {
+  background-color: #F15A24;
+}
+
+body {
+  position: relative;
+}
+
+@media (min-width: 961px),
+print {
+  #muse_css_mq {
+    background-color: #FFFFFF;
+  }
+  #bp_infinity.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 638px;
+    padding-left: 338px;
+    padding-right: 337px;
+    padding-bottom: 19px;
+  }
+  #u1323 {
+    width: 75px;
+    margin-left: 104px;
+  }
+  #u1322-4 {
+    width: 281px;
+    margin-left: 2px;
+    margin-top: 21px;
+  }
+  #u1325-4 {
+    margin-left: 2px;
+    margin-top: 29px;
+  }
+  #pu1313-4 {
+    margin-left: 2px;
+    margin-top: 8px;
+  }
+  #u1326-4,
+  #pu1315-4,
+  #u1327-4,
+  #pu1317-4,
+  #u1328-4 {
+    margin-left: 2px;
+    margin-top: 11px;
+  }
+  #pu1319-4 {
+    margin-top: 11px;
+  }
+  #u1313-4,
+  #u1315-4,
+  #u1317-4,
+  #u1319-4 {
+    width: 141px;
+  }
+  #u1314-4,
+  #u1316-4,
+  #u1318-4,
+  #u1320-4 {
+    width: 141px;
+    left: 141px;
+  }
+  #u1321-4 {
+    left: -1px;
+    margin-top: 38px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 681px);
+  }
+  body {
+    min-width: 960px;
+  }
+}
+
+@media (min-width: 741px) and (max-width: 960px) {
+  #muse_css_mq {
+    background-color: #0003c0;
+  }
+  #bp_960.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 636px;
+    padding-left: 228px;
+    padding-right: 227px;
+    padding-bottom: 20px;
+  }
+  #u1323 {
+    width: 75px;
+    margin-left: 104px;
+  }
+  #u1322-4 {
+    width: 281px;
+    margin-left: 1px;
+    margin-top: 43px;
+  }
+  #pu1313-4 {
+    margin-left: 1px;
+    margin-top: 3px;
+  }
+  #u1326-4 {
+    margin-left: 2px;
+    margin-top: 11px;
+  }
+  #pu1315-4,
+  #pu1317-4 {
+    margin-left: 1px;
+    margin-top: 10px;
+  }
+  #u1325-4,
+  #u1327-4,
+  #u1328-4 {
+    margin-left: 2px;
+    margin-top: 12px;
+  }
+  #pu1319-4 {
+    margin-top: 10px;
+  }
+  #u1313-4,
+  #u1315-4,
+  #u1317-4,
+  #u1319-4 {
+    width: 141px;
+  }
+  #u1314-4,
+  #u1316-4,
+  #u1318-4,
+  #u1320-4 {
+    width: 141px;
+    left: 141px;
+  }
+  #u1321-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 679px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 740px;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 740px) {
+  #muse_css_mq {
+    background-color: #0002e4;
+  }
+  #bp_740.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 636px;
+    padding-left: 17px;
+    padding-right: 18px;
+    padding-bottom: 20px;
+  }
+  #u1323 {
+    width: 75px;
+    margin-left: 105px;
+  }
+  #u1322-4 {
+    width: 281px;
+    margin-left: 2px;
+    margin-top: 43px;
+  }
+  #pu1313-4 {
+    margin-left: 2px;
+    margin-top: 3px;
+  }
+  #u1326-4 {
+    margin-left: 3px;
+    margin-top: 11px;
+  }
+  #pu1315-4,
+  #pu1317-4 {
+    margin-left: 2px;
+    margin-top: 10px;
+  }
+  #u1325-4,
+  #u1327-4,
+  #u1328-4 {
+    margin-left: 3px;
+    margin-top: 12px;
+  }
+  #pu1319-4 {
+    margin-top: 10px;
+  }
+  #u1313-4,
+  #u1315-4,
+  #u1317-4,
+  #u1319-4 {
+    width: 141px;
+  }
+  #u1314-4,
+  #u1316-4,
+  #u1318-4,
+  #u1320-4 {
+    width: 140px;
+    left: 141px;
+  }
+  #u1321-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 680px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
+
+@media (max-width: 320px) {
+  #muse_css_mq {
+    background-color: #000140;
+  }
+  #bp_320.active {
+    display: block;
+  }
+  #page {
+    width: 286px;
+    min-height: 556px;
+    padding-left: 17px;
+    padding-right: 17px;
+    padding-bottom: 103px;
+  }
+  #u1323 {
+    width: 38px;
+    margin-left: 124px;
+  }
+  #u1322-4 {
+    width: 280px;
+    margin-left: 3px;
+    margin-top: 1px;
+  }
+  #u1325-4 {
+    margin-left: 3px;
+    margin-top: 11px;
+  }
+  #pu1313-4 {
+    margin-left: 2px;
+    margin-top: 3px;
+  }
+  #pu1315-4 {
+    margin-left: 2px;
+    margin-top: 10px;
+  }
+  #u1326-4,
+  #u1327-4 {
+    margin-left: 3px;
+    margin-top: 12px;
+  }
+  #pu1317-4 {
+    margin-left: 2px;
+    margin-top: 9px;
+  }
+  #u1328-4 {
+    margin-left: 3px;
+    margin-top: 13px;
+  }
+  #pu1319-4 {
+    margin-top: 9px;
+  }
+  #u1313-4,
+  #u1315-4,
+  #u1317-4,
+  #u1319-4 {
+    width: 140px;
+  }
+  #u1314-4,
+  #u1316-4,
+  #u1318-4,
+  #u1320-4 {
+    width: 141px;
+    left: 140px;
+  }
+  #u1321-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 682px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
