--- a/data/css/novice.css
+++ b/data/css/novice.css
@@ -1,1 +1,533 @@
-.version.novice{color:#000015;background-color:#51FA6B;}#page{background-image:none;margin-right:auto;background-color:transparent;z-index:1;border-color:#000000;border-width:0px;margin-left:auto;}#u1231{position:relative;z-index:42;background-color:transparent;}#u1227{display:block;z-index:43;}#u1083-4{color:#000000;text-align:center;position:relative;font-weight:bold;min-height:35px;font-size:30px;line-height:36px;background-color:transparent;z-index:38;}#u1083-2{padding-top:8px;}#u1247-4{color:#FFFFFF;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:44;}#pu1077-4{width:0.01px;z-index:2;}#u1077-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:2;border-color:#000000;}#u1188-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:6;border-color:#000000;}#u1265-4{z-index:48;color:#FFFFFF;width:281px;position:relative;font-weight:bold;min-height:17px;font-size:12px;margin-top:11px;line-height:14px;background-color:transparent;}#pu1079-4{width:0.01px;z-index:10;}#u1079-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:10;border-color:#000000;}#u1200-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:14;border-color:#000000;}#u1289-4{color:#FFFFFF;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:52;}#pu1080-4{width:0.01px;z-index:18;}#u1080-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:18;border-color:#000000;}#u1209-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:22;border-color:#000000;}#u1301-4{color:#FFFFFF;width:281px;min-height:17px;position:relative;font-weight:bold;font-size:12px;line-height:14px;background-color:transparent;z-index:56;}#pu1081-4{z-index:26;width:0.01px;margin-left:2px;}#u1081-4{color:#FFFFFF;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;margin-right:-10000px;line-height:29px;background-color:#000000;z-index:26;border-color:#000000;}#u1218-4{color:#000000;text-align:center;position:relative;font-weight:normal;min-height:57px;font-size:22px;margin-right:-10000px;line-height:26px;background-color:#FFFFFF;z-index:30;border-color:#000000;}#u1082-4{color:#000000;text-align:center;position:relative;font-weight:bold;min-height:57px;font-size:24px;line-height:29px;background-color:#29ABE2;z-index:34;border-style:solid;border-color:#000000;border-radius:10px;width:281px;border-width:2px;}#u1077-2,#u1188-2,#u1079-2,#u1200-2,#u1080-2,#u1209-2,#u1081-2,#u1218-2,#u1082-2{padding-top:14px;}.html{background-color:#39B54A;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{width:285px;min-height:638px;padding:24px 337px 18px 338px;}#u1231{width:75px;margin-left:104px;}#u1083-4{width:281px;margin-left:2px;margin-top:21px;}#u1247-4{margin-left:2px;margin-top:29px;}#pu1077-4{margin-left:2px;margin-top:8px;}#u1265-4{margin-left:2px;}#pu1079-4,#u1289-4,#pu1080-4,#u1301-4{margin-left:2px;margin-top:11px;}#pu1081-4{margin-top:11px;}#u1077-4,#u1079-4,#u1080-4,#u1081-4{width:141px;}#u1188-4,#u1200-4,#u1209-4,#u1218-4{width:141px;left:141px;}#u1082-4{left:-1px;margin-top:38px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 680px);}body{min-width:960px;}}@media (min-width: 741px) and (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{width:285px;min-height:636px;padding:24px 227px 20px 228px;}#u1231{width:75px;margin-left:104px;}#u1083-4{width:281px;margin-left:1px;margin-top:43px;}#pu1077-4{margin-left:1px;margin-top:3px;}#u1265-4{margin-left:2px;}#pu1079-4,#pu1080-4{margin-left:1px;margin-top:10px;}#u1247-4,#u1289-4,#u1301-4{margin-left:2px;margin-top:12px;}#pu1081-4{margin-top:10px;}#u1077-4,#u1079-4,#u1080-4,#u1081-4{width:141px;}#u1188-4,#u1200-4,#u1209-4,#u1218-4{width:141px;left:141px;}#u1082-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 679px);}body{overflow-x:hidden;min-width:740px;}}@media (min-width: 321px) and (max-width: 740px){#muse_css_mq{background-color:#0002e4;}#bp_740.active{display:block;}#page{width:285px;min-height:636px;padding:24px 18px 20px 17px;}#u1231{width:75px;margin-left:105px;}#u1083-4{width:281px;margin-left:2px;margin-top:43px;}#pu1077-4{margin-left:2px;margin-top:3px;}#u1265-4{margin-left:3px;}#pu1079-4,#pu1080-4{margin-left:2px;margin-top:10px;}#u1247-4,#u1289-4,#u1301-4{margin-left:3px;margin-top:12px;}#pu1081-4{margin-top:10px;}#u1077-4,#u1079-4,#u1080-4,#u1081-4{width:141px;}#u1188-4,#u1200-4,#u1209-4,#u1218-4{width:140px;left:141px;}#u1082-4{margin-top:37px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 680px);}body{overflow-x:hidden;min-width:320px;}}@media (max-width: 320px){#muse_css_mq{background-color:#000140;}#bp_320.active{display:block;}#page{width:286px;min-height:565.5000000000001px;padding:15px 17px 103.49999999999989px;}#u1231{width:38px;margin-left:123px;}#u1083-4{width:280px;margin-left:3px;margin-top:11px;}#pu1077-4{margin-left:2px;margin-top:3px;}#u1265-4{margin-left:3px;}#u1200-4{width:141px;margin-top:1px;left:140px;}#pu1079-4,#pu1080-4{margin-left:2px;margin-top:10px;}#u1247-4,#u1289-4,#u1301-4{margin-left:3px;margin-top:12px;}#pu1081-4{margin-top:10px;}#u1077-4,#u1079-4,#u1080-4,#u1081-4{width:140px;}#u1188-4,#u1209-4,#u1218-4{width:141px;left:140px;}#u1082-4{margin-top:36px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 683px);}body{overflow-x:hidden;min-width:320px;}}
+.version.novice {
+  color: #000015;
+  background-color: #51FA6B;
+}
+
+#page {
+  background-image: none;
+  margin-right: auto;
+  background-color: transparent;
+  z-index: 1;
+  border-color: #000000;
+  border-width: 0px;
+  margin-left: auto;
+}
+
+#u1231 {
+  position: relative;
+  z-index: 42;
+  background-color: transparent;
+}
+
+#u1227 {
+  display: block;
+  z-index: 43;
+}
+
+#u1083-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 35px;
+  font-size: 30px;
+  line-height: 36px;
+  background-color: transparent;
+  z-index: 38;
+}
+
+#u1083-2 {
+  padding-top: 8px;
+}
+
+#u1247-4 {
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 44;
+}
+
+#pu1077-4 {
+  width: 0.01px;
+  z-index: 2;
+}
+
+#u1077-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 2;
+  border-color: #000000;
+}
+
+#u1188-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 6;
+  border-color: #000000;
+}
+
+#u1265-4 {
+  z-index: 48;
+  color: #FFFFFF;
+  width: 281px;
+  position: relative;
+  font-weight: bold;
+  min-height: 17px;
+  font-size: 12px;
+  margin-top: 11px;
+  line-height: 14px;
+  background-color: transparent;
+}
+
+#pu1079-4 {
+  width: 0.01px;
+  z-index: 10;
+}
+
+#u1079-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 10;
+  border-color: #000000;
+}
+
+#u1200-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 14;
+  border-color: #000000;
+}
+
+#u1289-4 {
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 52;
+}
+
+#pu1080-4 {
+  width: 0.01px;
+  z-index: 18;
+}
+
+#u1080-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 18;
+  border-color: #000000;
+}
+
+#u1209-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 22;
+  border-color: #000000;
+}
+
+#u1301-4 {
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 56;
+}
+
+#pu1081-4 {
+  z-index: 26;
+  width: 0.01px;
+  margin-left: 2px;
+}
+
+#u1081-4 {
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 26;
+  border-color: #000000;
+}
+
+#u1218-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 30;
+  border-color: #000000;
+}
+
+#u1082-4 {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  line-height: 29px;
+  background-color: #29ABE2;
+  z-index: 34;
+  border-style: solid;
+  border-color: #000000;
+  border-radius: 10px;
+  width: 281px;
+  border-width: 2px;
+}
+
+#u1077-2,
+#u1188-2,
+#u1079-2,
+#u1200-2,
+#u1080-2,
+#u1209-2,
+#u1081-2,
+#u1218-2,
+#u1082-2 {
+  padding-top: 14px;
+}
+
+.html {
+  background-color: #39B54A;
+}
+
+body {
+  position: relative;
+}
+
+@media (min-width: 961px),
+print {
+  #muse_css_mq {
+    background-color: #FFFFFF;
+  }
+  #bp_infinity.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 638px;
+    padding: 24px 337px 18px 338px;
+  }
+  #u1231 {
+    width: 75px;
+    margin-left: 104px;
+  }
+  #u1083-4 {
+    width: 281px;
+    margin-left: 2px;
+    margin-top: 21px;
+  }
+  #u1247-4 {
+    margin-left: 2px;
+    margin-top: 29px;
+  }
+  #pu1077-4 {
+    margin-left: 2px;
+    margin-top: 8px;
+  }
+  #u1265-4 {
+    margin-left: 2px;
+  }
+  #pu1079-4,
+  #u1289-4,
+  #pu1080-4,
+  #u1301-4 {
+    margin-left: 2px;
+    margin-top: 11px;
+  }
+  #pu1081-4 {
+    margin-top: 11px;
+  }
+  #u1077-4,
+  #u1079-4,
+  #u1080-4,
+  #u1081-4 {
+    width: 141px;
+  }
+  #u1188-4,
+  #u1200-4,
+  #u1209-4,
+  #u1218-4 {
+    width: 141px;
+    left: 141px;
+  }
+  #u1082-4 {
+    left: -1px;
+    margin-top: 38px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 680px);
+  }
+  body {
+    min-width: 960px;
+  }
+}
+
+@media (min-width: 741px) and (max-width: 960px) {
+  #muse_css_mq {
+    background-color: #0003c0;
+  }
+  #bp_960.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 636px;
+    padding: 24px 227px 20px 228px;
+  }
+  #u1231 {
+    width: 75px;
+    margin-left: 104px;
+  }
+  #u1083-4 {
+    width: 281px;
+    margin-left: 1px;
+    margin-top: 43px;
+  }
+  #pu1077-4 {
+    margin-left: 1px;
+    margin-top: 3px;
+  }
+  #u1265-4 {
+    margin-left: 2px;
+  }
+  #pu1079-4,
+  #pu1080-4 {
+    margin-left: 1px;
+    margin-top: 10px;
+  }
+  #u1247-4,
+  #u1289-4,
+  #u1301-4 {
+    margin-left: 2px;
+    margin-top: 12px;
+  }
+  #pu1081-4 {
+    margin-top: 10px;
+  }
+  #u1077-4,
+  #u1079-4,
+  #u1080-4,
+  #u1081-4 {
+    width: 141px;
+  }
+  #u1188-4,
+  #u1200-4,
+  #u1209-4,
+  #u1218-4 {
+    width: 141px;
+    left: 141px;
+  }
+  #u1082-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 679px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 740px;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 740px) {
+  #muse_css_mq {
+    background-color: #0002e4;
+  }
+  #bp_740.active {
+    display: block;
+  }
+  #page {
+    width: 285px;
+    min-height: 636px;
+    padding: 24px 18px 20px 17px;
+  }
+  #u1231 {
+    width: 75px;
+    margin-left: 105px;
+  }
+  #u1083-4 {
+    width: 281px;
+    margin-left: 2px;
+    margin-top: 43px;
+  }
+  #pu1077-4 {
+    margin-left: 2px;
+    margin-top: 3px;
+  }
+  #u1265-4 {
+    margin-left: 3px;
+  }
+  #pu1079-4,
+  #pu1080-4 {
+    margin-left: 2px;
+    margin-top: 10px;
+  }
+  #u1247-4,
+  #u1289-4,
+  #u1301-4 {
+    margin-left: 3px;
+    margin-top: 12px;
+  }
+  #pu1081-4 {
+    margin-top: 10px;
+  }
+  #u1077-4,
+  #u1079-4,
+  #u1080-4,
+  #u1081-4 {
+    width: 141px;
+  }
+  #u1188-4,
+  #u1200-4,
+  #u1209-4,
+  #u1218-4 {
+    width: 140px;
+    left: 141px;
+  }
+  #u1082-4 {
+    margin-top: 37px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 680px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
+
+@media (max-width: 320px) {
+  #muse_css_mq {
+    background-color: #000140;
+  }
+  #bp_320.active {
+    display: block;
+  }
+  #page {
+    width: 286px;
+    min-height: 565.5000000000001px;
+    padding: 15px 17px 103.49999999999989px;
+  }
+  #u1231 {
+    width: 38px;
+    margin-left: 123px;
+  }
+  #u1083-4 {
+    width: 280px;
+    margin-left: 3px;
+    margin-top: 11px;
+  }
+  #pu1077-4 {
+    margin-left: 2px;
+    margin-top: 3px;
+  }
+  #u1265-4 {
+    margin-left: 3px;
+  }
+  #u1200-4 {
+    width: 141px;
+    margin-top: 1px;
+    left: 140px;
+  }
+  #pu1079-4,
+  #pu1080-4 {
+    margin-left: 2px;
+    margin-top: 10px;
+  }
+  #u1247-4,
+  #u1289-4,
+  #u1301-4 {
+    margin-left: 3px;
+    margin-top: 12px;
+  }
+  #pu1081-4 {
+    margin-top: 10px;
+  }
+  #u1077-4,
+  #u1079-4,
+  #u1080-4,
+  #u1081-4 {
+    width: 140px;
+  }
+  #u1188-4,
+  #u1209-4,
+  #u1218-4 {
+    width: 141px;
+    left: 140px;
+  }
+  #u1082-4 {
+    margin-top: 36px;
+  }
+  .css_verticalspacer .verticalspacer {
+    height: calc(100vh - 683px);
+  }
+  body {
+    overflow-x: hidden;
+    min-width: 320px;
+  }
+}
